fixed container alignments in about-game and how it works

--- a/src/css/rewards.css
+++ b/src/css/rewards.css
@@ -2,6 +2,7 @@
   padding-top: 30px;
 }
 .rewards {
+  margin: 0 auto;
   border-radius: 60px 60px 0 0;
   width: 288px;
   height: auto;
